--- a/tests/lib/cmsis_dsp/matrix/testcase.yaml
+++ b/tests/lib/cmsis_dsp/matrix/testcase.yaml
@@ -16,6 +16,10 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q7=y
+    testcases:
+      - op1_arm_mat_trans_q7
+      - op2v_arm_mat_vec_mult_q7
+
   libraries.cmsis_dsp.matrix.unary_q7.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -28,6 +32,10 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q7=y
       - CONFIG_FPU=y
+    testcases:
+      - op1_arm_mat_trans_q7
+      - op2v_arm_mat_vec_mult_q7
+
   libraries.cmsis_dsp.matrix.unary_q15:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -41,6 +49,14 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q15=y
+    testcases:
+      - op2_arm_mat_add_q15
+      - op2_arm_mat_sub_q15
+      - op1_arm_mat_scale_q15
+      - op1_arm_mat_trans_q15
+      - op2v_arm_mat_vec_mult_q15
+      - op1c_arm_mat_cmplx_trans_q15
+
   libraries.cmsis_dsp.matrix.unary_q15.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -53,6 +69,14 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q15=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_add_q15
+      - op2_arm_mat_sub_q15
+      - op1_arm_mat_scale_q15
+      - op1_arm_mat_trans_q15
+      - op2v_arm_mat_vec_mult_q15
+      - op1c_arm_mat_cmplx_trans_q15
+
   libraries.cmsis_dsp.matrix.unary_q31:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -66,6 +90,14 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q31=y
+    testcases:
+      - op2_arm_mat_add_q31
+      - op2_arm_mat_sub_q31
+      - op1_arm_mat_scale_q31
+      - op1_arm_mat_trans_q31
+      - op2v_arm_mat_vec_mult_q31
+      - op1c_arm_mat_cmplx_trans_q31
+
   libraries.cmsis_dsp.matrix.unary_q31.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -78,6 +110,14 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_Q31=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_add_q31
+      - op2_arm_mat_sub_q31
+      - op1_arm_mat_scale_q31
+      - op1_arm_mat_trans_q31
+      - op2v_arm_mat_vec_mult_q31
+      - op1c_arm_mat_cmplx_trans_q31
+
   libraries.cmsis_dsp.matrix.unary_f16:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1)
     integration_platforms:
@@ -90,6 +130,18 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F16=y
+    testcases:
+      - op2_arm_mat_add_f16
+      - op2_arm_mat_sub_f16
+      - op1_arm_mat_scale_f16
+      - op1_arm_mat_trans_f16
+      - arm_mat_inverse_f16
+      - op2v_arm_mat_vec_mult_f16
+      - op1c_arm_mat_cmplx_trans_f16
+      - arm_mat_cholesky_f16
+      - arm_mat_solve_upper_triangular_f16
+      - arm_mat_solve_lower_triangular_f16
+
   libraries.cmsis_dsp.matrix.unary_f16.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1)
     integration_platforms:
@@ -102,6 +154,18 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F16=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_add_f16
+      - op2_arm_mat_sub_f16
+      - op1_arm_mat_scale_f16
+      - op1_arm_mat_trans_f16
+      - arm_mat_inverse_f16
+      - op2v_arm_mat_vec_mult_f16
+      - op1c_arm_mat_cmplx_trans_f16
+      - arm_mat_cholesky_f16
+      - arm_mat_solve_upper_triangular_f16
+      - arm_mat_solve_lower_triangular_f16
+
   libraries.cmsis_dsp.matrix.unary_f32:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -115,6 +179,18 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F32=y
+    testcases:
+      - op2_arm_mat_add_f32
+      - op2_arm_mat_sub_f32
+      - op1_arm_mat_scale_f32
+      - op1_arm_mat_trans_f32
+      - arm_mat_inverse_f32
+      - op2v_arm_mat_vec_mult_f32
+      - op1c_arm_mat_cmplx_trans_f32
+      - arm_mat_cholesky_f32
+      - arm_mat_solve_upper_triangular_f32
+      - arm_mat_solve_lower_triangular_f32
+
   libraries.cmsis_dsp.matrix.unary_f32.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -127,6 +203,18 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F32=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_add_f32
+      - op2_arm_mat_sub_f32
+      - op1_arm_mat_scale_f32
+      - op1_arm_mat_trans_f32
+      - arm_mat_inverse_f32
+      - op2v_arm_mat_vec_mult_f32
+      - op1c_arm_mat_cmplx_trans_f32
+      - arm_mat_cholesky_f32
+      - arm_mat_solve_upper_triangular_f32
+      - arm_mat_solve_lower_triangular_f32
+
   libraries.cmsis_dsp.matrix.unary_f64:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -140,6 +228,14 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F64=y
+    testcases:
+      - op2_arm_mat_sub_f64
+      - op1_arm_mat_trans_f64
+      - arm_mat_inverse_f64
+      - arm_mat_cholesky_f64
+      - arm_mat_solve_upper_triangular_f64
+      - arm_mat_solve_lower_triangular_f64
+
   libraries.cmsis_dsp.matrix.unary_f64.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -152,6 +248,14 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_UNARY_F64=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_sub_f64
+      - op1_arm_mat_trans_f64
+      - arm_mat_inverse_f64
+      - arm_mat_cholesky_f64
+      - arm_mat_solve_upper_triangular_f64
+      - arm_mat_solve_lower_triangular_f64
+
   libraries.cmsis_dsp.matrix.binary_q7:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -166,6 +270,9 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q7=y
+    testcases:
+      - op2_arm_mat_mult_q7
+
   libraries.cmsis_dsp.matrix.binary_q7.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -179,6 +286,9 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q7=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_mult_q7
+
   libraries.cmsis_dsp.matrix.binary_q15:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -193,6 +303,10 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q15=y
+    testcases:
+      - op2c_arm_mat_cmplx_mult_q15
+      - op2_arm_mat_mult_q15
+
   libraries.cmsis_dsp.matrix.binary_q15.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -206,6 +320,10 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q15=y
       - CONFIG_FPU=y
+    testcases:
+      - op2c_arm_mat_cmplx_mult_q15
+      - op2_arm_mat_mult_q15
+
   libraries.cmsis_dsp.matrix.binary_q31:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -220,6 +338,10 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q31=y
+    testcases:
+      - op2_arm_mat_mult_q31
+      - op2c_arm_mat_cmplx_mult_q31
+
   libraries.cmsis_dsp.matrix.binary_q31.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -233,6 +355,10 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_Q31=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_mult_q31
+      - op2c_arm_mat_cmplx_mult_q31
+
   libraries.cmsis_dsp.matrix.binary_f16:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1)
     integration_platforms:
@@ -245,6 +371,10 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F16=y
+    testcases:
+      - op2_arm_mat_mult_f16
+      - op2c_arm_mat_cmplx_mult_f16
+
   libraries.cmsis_dsp.matrix.binary_f16.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1)
     integration_platforms:
@@ -257,6 +387,10 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F16=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_mult_f16
+      - op2c_arm_mat_cmplx_mult_f16
+
   libraries.cmsis_dsp.matrix.binary_f32:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -271,6 +405,10 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F32=y
+    testcases:
+      - op2_arm_mat_mult_f32
+      - op2c_arm_mat_cmplx_mult_f32
+
   libraries.cmsis_dsp.matrix.binary_f32.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -284,6 +422,10 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F32=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_mult_f32
+      - op2c_arm_mat_cmplx_mult_f32
+
   libraries.cmsis_dsp.matrix.binary_f64:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -298,6 +440,9 @@ tests:
     extra_args: CONF_FILE=prj_base.conf
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F64=y
+    testcases:
+      - op2_arm_mat_mult_f64
+
   libraries.cmsis_dsp.matrix.binary_f64.fpu:
     filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
@@ -311,3 +456,5 @@ tests:
     extra_configs:
       - CONFIG_CMSIS_DSP_TEST_MATRIX_BINARY_F64=y
       - CONFIG_FPU=y
+    testcases:
+      - op2_arm_mat_mult_f64
