--- a/dts/bindings/display/ilitek,ili9341.yaml
+++ b/dts/bindings/display/ilitek,ili9341.yaml
@@ -4,7 +4,27 @@
 # Copyright (c) 2022, Konstantinos Papadopulos <kostas.papadopulos@gmail.com>
 # SPDX-License-Identifier: Apache-2.0
 
-description: ILI9341 320x240 display controller
+description: |
+    ILI9341 320x240 display controller
+
+    - 240 x RGB](H) x 320(V) resolution
+    - a-TFT LCD driver with on-chip full display, RAM 172,800 bytes
+    - System Interfaces
+      - 8-bits, 9-bits, 16-bits, 18-bits interface with 8080-I/8080-II series MCU
+      - 6-bits, 16-bits, 18-bits RGB interface with graphic controller
+      - 3-line / 4-line serial interface
+    - Modes
+      - Full color mode (Idle mode OFF), 262K-color (selectable color depth mode by software)
+      - Reduce color mode (Idle mode ON), 8-color
+      - Power saving sleep mode
+    - On chip functions
+      - VCOM generator and adjustment
+      - Timing generator
+      - Oscillator
+      - DC/DC converter
+      - Line/frame inversion
+      - 1 preset Gamma curves with separate RGB Gamma correction
+    - Content Adaptive Brightness Control
 
 compatible: "ilitek,ili9341"
 
