--- a/boards/riscv/icev_wireless/icev_wireless.dts
+++ b/boards/riscv/icev_wireless/icev_wireless.dts
@@ -77,7 +77,7 @@
 	pinctrl-0 = <&spim2_default>;
 	pinctrl-names = "default";
 
-	cs-gpios = <&gpio0 6 (GPIO_PULL_UP | GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>;
+	cs-gpios = <&gpio0 6 (GPIO_PUSH_PULL | GPIO_ACTIVE_LOW)>;
 
 	fpga0: fpga@0 {
 		status = "okay";
@@ -87,10 +87,12 @@
 		spi-max-frequency = <1000000>;
 
 		cdone-gpios = <&gpio0 0 0>;
-		creset-gpios = <&gpio0 1 GPIO_OPEN_DRAIN>;
-		creset-delay-ns = <200>;
-		config-delay-us = <2000>;
-		additional-clocks = <160>;
+		creset-gpios = <&gpio0 1 GPIO_PUSH_PULL>;
+		clk-gpios = <&gpio0 5 GPIO_PUSH_PULL>;
+		pico-gpios = <&gpio0 7 GPIO_PUSH_PULL>;
+		gpios-set-reg = <0x60004008>;
+		gpios-clear-reg = <0x6000400c>;
+		config-delay-us = <390>;
 	};
 };
 
