--- a/dts/bindings/fpga/lattice,ice40-fpga.yaml
+++ b/dts/bindings/fpga/lattice,ice40-fpga.yaml
@@ -8,7 +8,6 @@ compatible: "lattice,ice40-fpga"
 include: spi-device.yaml
 
 properties:
-
     cdone-gpios:
       type: phandle-array
       required: true
@@ -16,7 +15,7 @@ properties:
         Configuration Done output from iCE40.
         
         Example usage: 
-        cdone-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
+        cdone-gpios = <&gpio0 0 0>;
 
     creset-gpios:
       type: phandle-array
@@ -25,15 +24,68 @@ properties:
         Configuration Reset input on iCE40.
         
         Example usage: 
-        creset-gpios = <&gpio0 1 GPIO_ACTIVE_LOW>;
-    
+        creset-gpios = <&gpio0 1 GPIO_PUSH_PULL);
+
+    clk-gpios:
+      type: phandle-array
+      required: true
+      description: |
+        SPI Clock GPIO input on iCE40.
+        
+        Example usage: 
+        clk-gpios = <&gpio0 5 GPIO_PUSH_PULL>;
+
+    pico-gpios:
+      type: phandle-array
+      required: true
+      description: |
+        Peripheral-In Controller-Out GPIO input on iCE40.
+
+        Example usage: 
+        pico-gpios = <&gpio0 7 GPIO_PUSH_PULL>;
+
+    gpios-set-reg:
+      type: int
+      required: true
+      description: |
+        Register address for setting a GPIO.
+
+        Example usage:
+        gpios-set-reg = <0x60004008>;
+
+    gpios-clear-reg:
+      type: int
+      required: true
+      description: |
+        Register address for clearing a GPIO.
+
+        Example usage:
+        gpios-clear-reg = <0x6000400c>;
+
+    mhz-delay-count:
+      type: int
+      required: false
+      description: |
+        in order to create a 1 MHz square wave in the following
+        process.
+
+        while(true) {
+          *gpios_set_reg |= BIT(n);
+          for(int i = mhz_delay_count; i > 0; --i);
+          *gpios_clear_reg |= BIT(n);
+          for(int i = mhz_delay_count; i > 0; --i);
+        }
+
+        Example usage / default:
+        mhz-delay-count = <0>;
+
     creset-delay-ns:
       type: int
       required: false
       description: |
         Delay (in nanoseconds) between asserting CRESET_B and releasing CRESET_B.
 
-        Example usage:
+        Example usage / default:
         creset-delay-ns = <200>;
 
     config-delay-us:
@@ -42,16 +94,23 @@ properties:
       description: |
         Delay (in microseconds) after releasing CRESET_B to clear internal configuration memory.
 
-        Example usage:
+        Example usage / default:
         config-delay-us = <300>;
 
-    additional-clocks:
+    leading-clocks:
       type: int
       required: false
       description: |
-        After CDONE is signalled, send this number of additional clocks to
-        activate user-I/O pins. Note: the actual number may be rounded-up
-        by a factor of 8.
+        Prior to sending the bitstream, issue this number of leading clocks with SPI_CS pulled high.
 
-        Example usage:
-        additional-clocks = <49>;
+        Example usage / default:
+        leading-clocks = <8>;
+
+    trailing-clocks:
+      type: int
+      required: false
+      description: |
+        After sending the bitstream, issue this number of trailing clocks with SPI_CS pulled high.
+
+        Example usage / default:
+        trailing-clocks = <49>;
