--- a/tests/drivers/fpga/ice40/prj.conf
+++ b/tests/drivers/fpga/ice40/prj.conf
@@ -1,9 +1,8 @@
 CONFIG_ZTEST=y
 CONFIG_ZTEST_NEW_API=y
+CONFIG_ZTEST_STACK_SIZE=4096
 
 CONFIG_SPI=y
 CONFIG_FPGA=y
 CONFIG_PINCTRL=y
 CONFIG_ICE40_FPGA=y
-
-CONFIG_LOG=y
