--- a/dts/riscv/ite/it8xxx2.dtsi
+++ b/dts/riscv/ite/it8xxx2.dtsi
@@ -819,6 +819,45 @@
 			#gpio-cells = <2>;
 		};
 
+		gpioksi: gpiokscan@f01d07 {
+			compatible = "ite,it8xxx2-gpiokscan";
+			reg = <0x00f01d07 1
+			       0x00f01d06 1
+			       0x00f01d08 1
+			       0x00f01d09 1
+			       0x00f01d26 1>;
+			reg-names = "KSIGOEN", "KSIGCTRL", "KSIGDAT", "KSIGDMRR", "KSIGPODR";
+			ngpios = <8>;
+			gpio-controller;
+			#gpio-cells = <2>;
+		};
+
+		gpioksoh: gpiokscan@f01d0b {
+			compatible = "ite,it8xxx2-gpiokscan";
+			reg = <0x00f01d0b 1
+			       0x00f01d0a 1
+			       0x00f01d01 1
+			       0x00f01d0c 1
+			       0x00f01d27 1>;
+			reg-names = "KSOHGOEN", "KSOHGCTRL", "KSOH1", "KSOHGDMRR", "KSOHGPODR";
+			ngpios = <8>;
+			gpio-controller;
+			#gpio-cells = <2>;
+		};
+
+		gpioksol: gpiokscan@f01d0e {
+			compatible = "ite,it8xxx2-gpiokscan";
+			reg = <0x00f01d0e 1
+			       0x00f01d0d 1
+			       0x00f01d00 1
+			       0x00f01d0f 1
+			       0x00f01d28 1>;
+			reg-names = "KSOLGOEN", "KSOLGCTRL", "KSOL", "KSOLGDMRR", "KSOLGPODR";
+			ngpios = <8>;
+			gpio-controller;
+			#gpio-cells = <2>;
+		};
+
 		espi0: espi@f03100 {
 			compatible = "ite,it8xxx2-espi";
 			reg = <0x00f03100 0xd8    /* eSPI slave */
