--- a/dts/arm/nxp/nxp_rt1010.dtsi
+++ b/dts/arm/nxp/nxp_rt1010.dtsi
@@ -22,6 +22,14 @@
 	reg = <0x20200000 DT_SIZE_K(64)>;
 };
 
+&ccm {
+	/delete-node/ arm-podf;
+
+	ipg-podf {
+		clock-div = <4>;
+	};
+};
+
 &gpio1 {
 	interrupts = <70 0>, <71 0>;
 };
